Posts split into menu categories

--- a/content/post/2020-05-14-polya-urn-simulation.Rmd
+++ b/content/post/2020-05-14-polya-urn-simulation.Rmd
@@ -11,6 +11,7 @@ tags:
   - martingales
   - mathematics
   - python
+  - computing
 subtitle: ''
 summary: 'We introduce the Polya Urn model and implement a simulation in Python.'
 authors: [admin]
